load("@rules_kotlin//kotlin:core.bzl", "define_kt_toolchain", "kt_javac_options", "kt_kotlinc_options")

kt_kotlinc_options(
    name = "kt_kotlinc_options",
)

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "2.0",
    experimental_use_abi_jars = True,
    jvm_target = "21",
    kotlinc_options = "//:kt_kotlinc_options",
    language_version = "2.0",
)

# Use this to override "kt_kotlinc_options" in specific kt_jvm_library rules to generate maximum performance bytecode
# by disabling code generation of various runtime sanity checks.
#
kt_kotlinc_options(
    name = "kt_kotlinc_perf_options",
    visibility = ["//visibility:public"],
)
