module(name = "jnb-ping")

bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_kotlin", version = "2.3.20")
bazel_dep(name = "rules_jvm_external", version = "7.0")

register_toolchains("//:kotlin_toolchain")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        # Runtime
        "com.github.jnr:jnr-posix:3.1.20",
        "com.carrotsearch:hppc:0.10.0",
        "org.jetbrains.kotlin:kotlin-stdlib:2.3.20",
        # Test
        "org.junit.jupiter:junit-jupiter-api:5.12.1",
        "org.junit.jupiter:junit-jupiter-engine:5.12.1",
        "org.junit.platform:junit-platform-console:1.12.1",
        "org.junit.platform:junit-platform-launcher:1.12.1",
        "org.junit.platform:junit-platform-reporting:1.12.1",
        # Dokka (javadoc generation)
        "org.freemarker:freemarker:2.3.32",
        "org.jetbrains.dokka:analysis-kotlin-descriptors:2.2.0",
        "org.jetbrains.dokka:dokka-base:2.2.0",
        "org.jetbrains.dokka:dokka-cli:2.2.0",
        "org.jetbrains.kotlinx:kotlinx-html-jvm:0.9.1",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    known_contributing_modules = ["protobuf"],
)
use_repo(maven, "maven")

jnb_ping_version_ext = use_extension("//:version.bzl", "jnb_ping_version_ext")
use_repo(jnb_ping_version_ext, "jnb_ping_version")
