load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "ping",
    srcs = glob(["**/*.kt"]),
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_carrotsearch_hppc",
        "@maven//:com_github_jnr_jnr_posix",
    ],
)

filegroup(
    name = "srcs",
    srcs = glob(["**/*.kt"]),
    visibility = ["//visibility:public"],
)
